Fixed white space wrapping

--- a/src/components/chart/pxData/legend/main.module.scss
+++ b/src/components/chart/pxData/legend/main.module.scss
@@ -4,6 +4,7 @@ div, span {
   &.data-cell {
     display: inline;
     padding: 0.1rem 0.75rem 0.1rem 0;
+    white-space: nowrap;
   }
 
   &.legend {
